--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
 .App {
   text-align: center;
+  color: white;
+
+  height: 100%;
+}
+
+.wrapword {
+  white-space: -webkit-pre-wrap;
+  word-break: normal;
+  white-space: pre-wrap;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 10px;
+  letter-spacing: -0.3px;
+  color: white;
+  font-family: Poppins, sans-serif;
+  font-weight: 600;
 }
