--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+  background: url('./assets/Capitol-1920px-sky.jpg') no-repeat bottom center
+    fixed;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 100%;
+  box-sizing: border-box;
 }
 
 code {
