--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 10px;
+  margin: 0;
   letter-spacing: -0.3px;
   color: white;
   font-family: Poppins, sans-serif;
