--- a/src/components/Proposal.module.css
+++ b/src/components/Proposal.module.css
@@ -1,11 +1,21 @@
 .proposal {
-  background-color: #030c2daa; /* a bit transparent */
-  border: 1px solid red;
+  background-color: #030c2dbb; /* a bit transparent */
+  /* border: 4px solid #030c2d77; */
   text-align: left;
   padding: 1rem;
-  margin: 1rem;
+}
+
+.proposal a {
+  text-decoration: underline;
 }
 
 .main {
   display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .main {
+    flex-direction: row;
+  }
 }
