--- a/src/components/Proposals.module.css
+++ b/src/components/Proposals.module.css
@@ -5,14 +5,19 @@
   padding: 1rem;
 }
 
+.proposals ul {
+  padding-inline-start: 0;
+  margin: 1rem;
+}
+
+li.ACTIVE {
+  background-color: #274480;
+}
+
+li.EXECUTED {
+  background-color: #00031199;
+}
+
 .proposals li:hover {
-  background-color: #000311;
-}
-
-.proposals li.ACTIVE {
-  background-color: #0b1e56;
-}
-
-.proposals li.EXECUTED {
-  background-color: darkgray;
+  background-color: transparent;
 }
